# kbdgen-init

./: Cargo.toml
examples/: test.rs
src/: ir.rs  lib.rs  models.rs
